--- a/Animate-food-landing-page/index.html
+++ b/Animate-food-landing-page/index.html
@@ -387,9 +387,7 @@
         <div class="container">
             <div class="row footer-main">
                 <div class="col-6 col-md-12">
-                    <h1>
-                        <a href="#">Fresh Food</a>
-                    </h1>
+                    <h1>Fresh Food</h1>
                     <br>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut amet tenetur ducimus. Nemo illum velit nostrum aut, 
