--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -29,7 +29,7 @@
         <div class="header-container">
             <div class="header-container__profile">
                 <img src="./assets/img/profile.jpg" alt="">
-                <h1>Minh Phuong Do</h1>
+                <h1>Do Thi Minh Phuong</h1>
                 <div class="header-container__social">
                     <a href="https://www.facebook.com/phuongmin0616" target="_blank"><i class="bx bxl-facebook"></i></a>
                     <a href=""><i class="bx bxl-instagram"></i></a>
@@ -155,10 +155,10 @@
                                         JAVASCRIPT 
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="">
                                     </span>
-                                    <i class="val">60%</i>
+                                    <i class="val">50%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width: 60%;"></div>
+                                    <div class="progress-bar" style="width: 50%;"></div>
                                 </div>
                             </div>
                         </div>
@@ -170,10 +170,10 @@
                                         REACTJS 
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original.svg" alt="">
                                     </span>
-                                    <i class="val">55%</i>
+                                    <i class="val">45%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width: 55%;"></div>
+                                    <div class="progress-bar" style="width: 45%;"></div>
                                 </div>
                             </div>
                             <div class="progress">
@@ -182,13 +182,13 @@
                                         NODEJS 
                                         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original.svg" alt="">
                                     </span>
-                                    <i class="val">40%</i>
+                                    <i class="val">30%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" style="width: 40%;"></div>
+                                    <div class="progress-bar" style="width: 30%;"></div>
                                 </div>
                             </div>
-                            <div class="progress">
+                            <!-- <div class="progress">
                                 <span class="skill">
                                     <span class="skill-item">
                                         TYPESCRIPT 
@@ -199,7 +199,7 @@
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" style="width: 10%;"></div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -219,9 +219,9 @@
                                 <p><em>I'm a passionate about interface design and Website development.</em></p>
                                 <p><em>A cheerful, sociable person who is always motivated to learn and discover new things</em></p>
                                 <ul>
-                                    <li>Cau Giay, Ha Noi</li>
-                                    <li>18008918</li>
-                                    <li>technology@gmail.com</li>
+                                    <li>Minh Khai, Bac Tu Liem, Ha Noi</li>
+                                    <li>0389247621</li>
+                                    <li>minhphuongdo2001@gmail.com</li>
                                 </ul>
                             </div>
 
@@ -273,13 +273,16 @@
                                 <h5>2021 - Present</h5>
                                 <ul>
                                     <li>Source code: <a href="https://github.com/minhphuong2001/Social-Media"  target="_blank"> https://github.com/minhphuong2001/Social-Media</a></li>
+                                    <li>Demo: <a href="https://social-media-demos.netlify.app"  target="_blank"> https://social-media-demos.netlify.app</a></li>
+                                    
                                     <li> Using
                                         <ul>
                                             <li>Front end: ReactJS, Redux</li>
                                             <li>Back end: NodeJS(Express), MongoDB, Socket.io</li>
                                         </ul>
                                     </li>
-                                    <li>Description: The website has the feature to post articles, follow friends and chat</li>
+                                    <li>Description: The website has the feature to login, register, post articles, follow friends and chat</li>
+                                    <li>Login: username: minhphuong2001, password: phuong0123</li>
                                 </ul>
                             </div>
                             <div class="resume-item">
