--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="col-8 col-md-12 col-sm-12 about-content">
                             <h3>Web Developer</h3>
-                            <i>My nickname is Min, a frontend web developer with 3 months of experience in ReactJS. I good at knowledge of HTML, CSS, JS.
+                            <i>My nickname is Min, a frontend web developer with 6 months of experience in ReactJS. I good at knowledge of HTML, CSS, JS.
                                 And I also know a bit about NodeJS(Express), Database Design.
                             </i>
                             <div class="row">
@@ -253,19 +253,15 @@
                                 <h4>e-commerce</h4>
                                 <ul>
                                     <li>Source code: <a href="https://github.com/minhphuong2001/E-Commerce"  target="_blank">https://github.com/minhphuong2001/E-Commerce</a></li>
+                                    <li>Demo: <a href="https://minthor-shop-ecommerce.netlify.app"  target="_blank"> https://minthor-shop-ecommerce.netlify.app</a></li>
                                     <li> Using
                                         <ul>
-                                            <li>Front end: ReactJS, , Redux-toolkit</li>
+                                            <li>Front end: ReactJS, Redux, Redux-toolkit, Material-UI</li>
                                             <li>Back end: NodeJS(Express), MongoDB</li>
                                         </ul>
                                     </li>
-                                    <li>Description: 
-                                        <ul>
-                                            <li>Product view</li>
-                                            <li>Filter produts by category</li>
-                                            <li>Order and purchase</li>
-                                        </ul>
-                                    </li>
+                                    <li>Description: producview, filter produts by category, search, login, register and order and purchase</li>
+                                    <li>Login: username: minmin2001, password: minmin2001@</li>
                                 </ul>
                             </div>
                             <div class="resume-item">
